Frontend Software Engineer - Grafana Labs. Job Application for Senior Front End Developer at Bandwidth. Job @ fintory (Duisburg): Front-end developer (m/f/d) | JOIN. Job @ SimScale (Munich): Senior Frontend Developer... | JOIN. RingCentral Careers - Front-end Engineer. Job @ AST Engineering  (Ottobrunn): Frontend Entwi... | JOIN. Senior Front End Developer (ReactJS) - Mexico - Modus Create, Inc. - Career Page. Job Application for Frontend Engineer, Defend at GitLab. Job Application for Frontend Engineer - Manage at GitLab. Job Application for Frontend Engineer, Defend at GitLab. Job Application for Frontend Engineer, Defend at GitLab. Job Application for Frontend Engineer, Defend at GitLab. Job Application for Frontend Engineer, Secure at GitLab. Job Application for Frontend Engineer, Secure at GitLab. Job Application for Frontend Engineer, Secure at GitLab. Job Application for Frontend Engineer - Manage at GitLab. Stellenangebot: Senior Frontend / Full Stack Developer (m/w/d) Automotive (Düsseldorf) – dasauge® Stellenmarkt. Stellenangebot: Frontend Developer (m/w/d) Automotive (Düsseldorf) – dasauge® Stellenmarkt. Stellenangebot: Frontend Entwickler (m/w/d) JavaScript Frameworks (Berlin) – dasauge® Stellenmarkt. Bonial International Gmbh Senior Frontend Engineer - JavaScript (Web) (m/f/d) | SmartRecruiters. Front End Developer - Experian Careers. CITECH Développeur Front-End (H/F) | SmartRecruiters. Front End Engineer - DeepNLP - SparkCognition - Career Page. Job @ Hornetsecurity (Hanover): Frontend Developer... | JOIN. Chegg Careers - Staff Software Engineer - Frontend React/Redux. Lucid - Sr. Manager, FrontEnd Engineering. Cultivating New Frontiers in Agriculture (CNFA) - Gender, Youth, and Social Dynamics (GYSD) Lead - Zimbabwe. Altenar Frontend developer | SmartRecruiters. Ambassador - Sr. Front-end Engineer. Job @ bonify (Berlin): Frontend Developer | JOIN. Job Application for Front-end Web Developer (Temp) at Singular.       Front-End Developer - Daily Paper 

--- a/frontend.html
+++ b/frontend.html
@@ -38,6 +38,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='https://apply.workable.com/grafana-labs/j/CA4F5AFFB6/'>Frontend Software Engineer - Grafana Labs</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-11-01</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/bandwidth/jobs/1940184'>Job Application for Senior Front End Developer at Bandwidth</a></h5> 
 <p><span class="badge badge-light">Raleigh, NC</span></p>
 <p>Posted on: 2019-11-01</p>
@@ -50,11 +54,11 @@
 <p><span class="badge badge-light">Munich Munich Munich</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/ringcentral/job/oDXrbfwW'>RingCentral Careers - Front-end Engineer</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/ringcentral/job/oDXrbfwW'>RingCentral Careers - Front-end Engineer</a></h5> 
 <p><span class="badge badge-light">Paris, France  Paris</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ast-engineering.join.com/jobs/466245-frontend-entwickler-m-w-d'>Job @ AST Engineering  (Ottobrunn): Frontend Entwi... | JOIN</a></h5> 
+<h5><a href='https://ast-engineering.join.com/jobs/466245-frontend-entwickler-m-w-d'>Job @ AST Engineering  (Ottobrunn): Frontend Entwi... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -110,7 +114,7 @@
 <p><span class="badge badge-light">Berlin Berlin</span></p>
 <p>Posted on:: 2019-11-01</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/kaufDA/743999698629937-senior-frontend-engineer-javascript-web-m-f-d-'>Bonial International Gmbh Senior Frontend Engineer - JavaScript (Web) (m/f/d) | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/kaufDA/743999698629937-senior-frontend-engineer-javascript-web-m-f-d-'>Bonial International Gmbh Senior Frontend Engineer - JavaScript (Web) (m/f/d) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Berlin, Deutschland</span></p>
 <p>Posted on: 2019-11-01</p>
 <hr/>
@@ -154,7 +158,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Germany  Berlin Berlin</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/singular/jobs/4500388002'>Job Application for Front-end Web Developer (Temp) at Singular</a></h5> 
+<h5><a href='https://boards.greenhouse.io/singular/jobs/4500388002'>Job Application for Front-end Web Developer (Temp) at Singular</a></h5> 
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -208,7 +212,7 @@
 <p><span class="badge badge-light">Mexico City, Mexico</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://brandung.join.com/jobs/457437-frontend-developer-typo3-w-m-d'>Job @ brandung & Co. KG (Berlin): Frontend Develop... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://brandung.join.com/jobs/457437-frontend-developer-typo3-w-m-d'>Job @ brandung & Co. KG (Berlin): Frontend Develop... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -222,7 +226,7 @@
 <p><span class="badge badge-light">Utrecht</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://dribbble.com/jobs/18507-Front-End-Developer?source=twitter'>
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://dribbble.com/jobs/18507-Front-End-Developer?source=twitter'>
       Front End Developer at Moixa Technology - London, UK - Dribbble Design Jobs
   </a></h5> 
 <p><span class="badge badge-light">London</span></p>
@@ -258,7 +262,7 @@
 <p><span class="badge badge-light">Newark, NJ</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxIUKlDv4AYZbzDzGhBKWbq0-&embedsource=CareerSite'>Sr Frontend Developer (React JS or Angular JS)</a></h5> 
+<h5><a href='https://ngtechinc.zohorecruit.com/recruit/ViewJob.na?digest=tIjHuWh8jyuU41WZZ2OUxIUKlDv4AYZbzDzGhBKWbq0-&embedsource=CareerSite'>Sr Frontend Developer (React JS or Angular JS)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -278,7 +282,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/menlosecurity/jobs/4501326002'>Job Application for Front End Software Engineer at Menlo Security</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/menlosecurity/jobs/4501326002'>Job Application for Front End Software Engineer at Menlo Security</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
@@ -322,7 +326,7 @@
 <p><span class="badge badge-light">Berlin Berlin, Deutschland</span></p>
 <p>Posted on: 2019-10-31</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.awwwards.com/jobs/front-end-developer-san-ying-shi.html'>Front-end developer - ??? - Japan</a></h5> 
+<h5><a href='https://www.awwwards.com/jobs/front-end-developer-san-ying-shi.html'>Front-end developer - ??? - Japan</a></h5> 
 <p><span class="badge badge-light">New York City</span></p>
 <p>Posted on:: 2019-10-31</p>
 <hr/>
@@ -358,7 +362,7 @@
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698547010-shopify-front-end-developer'>outsourced Shopify Front End Developer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Outsourced1/743999698547010-shopify-front-end-developer'>outsourced Shopify Front End Developer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Philippines</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -378,7 +382,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://hornetsecurity.join.com/jobs/464334-frontend-developer-m-f-d'>Job @ Hornetsecurity (Tandil): Frontend Developer ... | JOIN</a></h5> 
+<h5><a href='https://hornetsecurity.join.com/jobs/464334-frontend-developer-m-f-d'>Job @ Hornetsecurity (Tandil): Frontend Developer ... | JOIN</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -386,7 +390,7 @@
 <p><span class="badge badge-light">New York, NY United States</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/iSpaceInc/743999698533907-cloud-solutions-engineer-front-end'>iSpace, Inc. Cloud Solutions Engineer - Front-End | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/iSpaceInc/743999698533907-cloud-solutions-engineer-front-end'>iSpace, Inc. Cloud Solutions Engineer - Front-End | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">San Francisco, CA, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -406,7 +410,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<h5><a href='https://coinjobs.org/job/senior-front-end-engineer-at-blockchain/'>Senior Front End Engineer at Blockchain ? CoinJobs</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://coinjobs.org/job/senior-front-end-engineer-at-blockchain/'>Senior Front End Engineer at Blockchain ? CoinJobs</a></h5> 
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -422,7 +426,7 @@
 <p><span class="badge badge-light">San Francisco, CA  Boston, MA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=owvG9fwA&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n638oMwW'>Freedom Financial Network Careers - Senior Front End Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=owvG9fwA&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n638oMwW'>Freedom Financial Network Careers - Senior Front End Engineer</a></h5> 
 <p><span class="badge badge-light">San Mateo, California  Menlo Park, CA San Mateo, CA</span></p>
 <p>Posted on:: 2019-10-30</p>
 <hr/>
@@ -443,10 +447,6 @@
 <p>Posted on: 2019-10-30</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/castlegroup/job/oXGrbfwZ'>Castle Group Careers - Front Desk Attendant or Concierge</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-30</p>
-<hr/>
-<h5><a href='https://jobs.jobvite.com/castlegroup/job/oaGrbfwc'>Castle Group Careers - Front Desk Attendant or Concierge</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
